syntax = "proto3";
package login.v1;
option go_package = "github.com/Wafer233/msproject-be/api-gateway/proto/login";

service LoginService {
  rpc GetCaptcha(GetCaptchaRequest) returns (GetCaptchaResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc TokenVerify(TokenVerifyRequest) returns (TokenVerifyResponse) {}
  rpc GetOrgList(GetOrgListRequest) returns (GetOrgListResponse) {}
  //  rpc FindMemInfoById(UserMessage) returns (MemberMessage) {}
  //  rpc FindMemInfoByIds(UserMessage) returns (MemberMessageList) {}
}

// ---------------------------- GetCaptcha ----------------------------
message GetCaptchaRequest {
  string mobile = 1;
}
message GetCaptchaResponse{
  string code = 1;
}
// ---------------------------- Register ----------------------------
message RegisterRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string mobile = 4;
  string captcha = 5;
}
message RegisterResponse {}
// ---------------------------- Login ----------------------------
message LoginRequest {
  string account = 1;
  string password = 2;
  string token = 3;
  string ip = 4;
}
message LoginResponse{
  Member member = 1;
  repeated Organization organizationList = 2;
  Token tokenList = 3;
}
// ---------------------------- TokenVerify ----------------------------
message TokenVerifyRequest {
  string account = 1;
  string password = 2;
  string token = 3;
  string ip = 4;
}
message TokenVerifyResponse{
  Member member = 1;
  repeated Organization organizationList = 2;
  Token tokenList = 3;
}
// ---------------------------- GetOrgList ----------------------------
message GetOrgListRequest {
  int64 memberId = 1;
}
message GetOrgListResponse{
  repeated Organization organizationList = 1;
}
// ---------------------------- common ----------------------------
message Member {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  string realname = 4;
  string account = 5;
  int32 status = 6;
  string lastLoginTime = 7;
  string address = 8;
  int32 province = 9;
  int32 city = 10;
  int32 area = 11;
  string email = 12;
  string code = 13;
  string createTime = 14;
  string organizationCode = 15;
  string avatar = 16;
}
message Organization {
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string description = 4;
  int64 memberId = 5;
  string createTime = 6;
  int32 personal = 7;
  string address = 8;
  int32 province = 9;
  int32 city = 10;
  int32 area = 11;
  string code = 12;
  string ownerCode = 13;
}
message Token{
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
  int64 accessTokenExp = 4;
}
