syntax = "proto3";
package project.service.v1;
option go_package = "github.com/Wafer233/msproject-be/api-gateway/proto/project";

message SelfListMessage{
  int64 memberId = 1;
  string memberName = 2;
  int64 page = 3;
  int64 pageSize = 4;
  string selectBy = 5;
  string organizationCode = 6;
  int32 viewType = 7;
  string name = 8;
  string templateCode = 9;
  string description = 10;
  int64 id = 11;
  string projectCode = 12;
  bool deleted = 13;
  string collectType = 14;
}

message SelfListResponse{
  repeated Project list = 1;
  int64 total = 2;
}

message Project{
  int64 Id = 1;
  string Cover = 2;
  string Name = 3;
  string Description = 4;
  string AccessControlType = 5;
  string WhiteList = 6;
  int32 Order = 7;
  int32 Deleted = 8;
  string TemplateCode = 9;
  double Schedule = 10;
  string CreateTime = 11;
  string OrganizationCode = 12;
  string DeletedTime = 13;
  int32 Private = 14;
  string Prefix = 15;
  int32 OpenPrefix = 16;
  int32 Archive = 17;
  int64 ArchiveTime = 18;
  int32 OpenBeginTime = 19;
  int32 OpenTaskPrivate = 20;
  string TaskBoardTheme = 21;
  string BeginTime = 22;
  string EndTime = 23;
  int32 AutoUpdateSchedule = 24;
  int64 ProjectCode = 25;
  int64 MemberCode = 26;
  string JoinTime = 27;
  int64 IsOwner = 28;
  string Authorize = 29;
  string code = 30;
  string ownerName = 31;
  int32 collected = 32;
}


// Project service definition
service ProjectService {
  rpc SelfList(SelfListMessage) returns (SelfListResponse){}
}